redo emissions vis, avoid overlapping text
previously the emissions vis div was overlapping the article text.
this led to weird things like not being able to click/select text in the body.
fixed by assigning a max-width to the sticky vis, and making its child
inherit that width

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ rather than behind the text which is the default behavior */
 
 .idyll-sticky-side-scroll .idyll-scroll-graphic {
   flex: 1;
+  max-width: 600px;
 }
 
 .idyll-sticky-side-scroll .idyll-text-container {
@@ -77,8 +78,9 @@ svg.emissions-treemap {
 }
 
 .idyll-scroll-graphic > div {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: inherit;
 }
 
 .idyll-step h1 {
